--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
 
     <!-- Pre-load third party scripts that cannot be async loaded. -->
     <script src="thirdparty/jquery-1.7.min.js"></script>
+    <script src="thirdparty/jquery-ui-1.8.23.min.js"></script>
     <script src="thirdparty/CodeMirror2/lib/codemirror.js"></script>
     
     <!-- JS for CodeMirror search support, currently for debugging only -->
