--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,12 @@
   DEALINGS IN THE SOFTWARE.
 -->
 
+<script>
+if (/^file:\/\//.test(window.location)) {
+    window.location = window.location.toString().replace(/^file:\/\/(localhost)?/, "http://localhost:3000");
+}
+</script>
+
 <html>
 <head>
     <meta charset="utf-8">
