silly graph because I had to

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,8 @@ if (/^file:\/\//.test(window.location)) {
     <script src="thirdparty/jquery-1.7.min.js"></script>
     <script src="thirdparty/jquery-ui-1.8.23.min.js"></script>
     <script src="thirdparty/CodeMirror2/lib/codemirror.js"></script>
+    <script src="thirdparty/d3.v2.js"></script>
+    <script src="thirdparty/cubism.v1.js"></script>
     
     <!-- JS for CodeMirror search support, currently for debugging only -->
     <script src="thirdparty/CodeMirror2/lib/util/dialog.js"></script>
