disable redirect that causes Brackets to omnibug itself

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
 <script>
 if (/^file:\/\//.test(window.location)) {
-    window.location = window.location.toString().replace(/^file:\/\/(localhost)?/, "http://localhost:3000");
+    // window.location = window.location.toString().replace(/^file:\/\/(localhost)?/, "http://localhost:3000");
 }
 </script>
 
